--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -41,7 +41,9 @@
     <ClInclude Include="render\renderdebug.h" />
     <ClInclude Include="render\renderstate.h" />
     <ClInclude Include="render\shader.h" />
+    <ClInclude Include="render\shaderattribute.h" />
     <ClInclude Include="render\shaderprogram.h" />
+    <ClInclude Include="render\shaderUniform.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="util\active.h" />
     <ClInclude Include="util\exception.h" />
@@ -71,7 +73,9 @@
     <ClCompile Include="render\renderdebug.cpp" />
     <ClCompile Include="render\renderstate.cpp" />
     <ClCompile Include="render\shader.cpp" />
+    <ClCompile Include="render\shaderAttribute.cpp" />
     <ClCompile Include="render\shaderprogram.cpp" />
+    <ClCompile Include="render\shaderUniform.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -94,6 +98,7 @@
     <None Include="core\settings.inl" />
     <None Include="core\system.inl" />
     <None Include="math\clamp.inl" />
+    <None Include="render\shaderprogram.inl" />
     <None Include="util\supports.inl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
