added opengl types to constant conversions added indexbuffer class fixed a couple of issues with the vertexbuffer and buffer classes changed the test application to use vertex coloring

--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -40,12 +40,14 @@
     <ClInclude Include="preprocessor.h" />
     <ClInclude Include="render\buffer.h" />
     <ClInclude Include="render\common_vertex_formats.h" />
+    <ClInclude Include="render\indexbuffer.h" />
     <ClInclude Include="render\renderdebug.h" />
     <ClInclude Include="render\renderstate.h" />
     <ClInclude Include="render\shader.h" />
     <ClInclude Include="render\shaderattribute.h" />
     <ClInclude Include="render\shaderprogram.h" />
     <ClInclude Include="render\shaderUniform.h" />
+    <ClInclude Include="render\gltypes.h" />
     <ClInclude Include="render\vertexbuffer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="util\active.h" />
@@ -103,7 +105,9 @@
     <None Include="core\system.inl" />
     <None Include="math\clamp.inl" />
     <None Include="render\buffer.inl" />
+    <None Include="render\indexbuffer.inl" />
     <None Include="render\shaderprogram.inl" />
+    <None Include="render\gltypes.cpp" />
     <None Include="render\vertexbuffer.inl" />
     <None Include="util\enum_bitfield.inl" />
     <None Include="util\supports.inl" />
@@ -186,7 +190,7 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
@@ -226,7 +230,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;dbghelp.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
