--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -45,7 +45,7 @@
     <ClInclude Include="render\renderdebug.h" />
     <ClInclude Include="render\renderstate.h" />
     <ClInclude Include="render\shader.h" />
-    <ClInclude Include="render\shaderattribute.h" />
+    <ClInclude Include="render\shaderAttribute.h" />
     <ClInclude Include="render\shaderprogram.h" />
     <ClInclude Include="render\shaderUniform.h" />
     <ClInclude Include="render\gltypes.h" />
@@ -89,7 +89,7 @@
     <ClCompile Include="render\renderstate.cpp" />
     <ClCompile Include="render\shader.cpp" />
     <ClCompile Include="render\shaderAttribute.cpp" />
-    <ClCompile Include="render\shaderprogram.cpp" />
+    <ClCompile Include="render\shaderProgram.cpp" />
     <ClCompile Include="render\shaderUniform.cpp" />
     <ClCompile Include="render\texture1D.cpp" />
     <ClCompile Include="render\texture2D.cpp" />
