--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -69,10 +69,12 @@
     <ClInclude Include="scene\scene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="util\active.h" />
+    <ClInclude Include="util\csv.h" />
     <ClInclude Include="util\enum_bitfield.h" />
     <ClInclude Include="util\exception.h" />
     <ClInclude Include="util\exception_windows.h" />
     <ClInclude Include="util\supports.h" />
+    <ClInclude Include="util\tuple.h" />
     <ClInclude Include="video\monitor.h" />
     <ClInclude Include="video\oculusvr.h" />
     <ClInclude Include="video\video.h" />
@@ -145,8 +147,10 @@
     <ClCompile Include="render\gltypes.cpp" />
     <None Include="render\vertexarray.inl" />
     <None Include="render\vertexbuffer.inl" />
+    <None Include="util\csv.inl" />
     <None Include="util\enum_bitfield.inl" />
     <None Include="util\supports.inl" />
+    <None Include="util\tuple.inl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BF895ABB-A2C9-4AA2-856B-1DF4FCB78212}</ProjectGuid>
