--- a/Overdrive/Overdrive.vcxproj.filters
+++ b/Overdrive/Overdrive.vcxproj.filters
@@ -232,6 +232,12 @@
     <ClInclude Include="render\shape_fullquad.h">
       <Filter>render\shapes</Filter>
     </ClInclude>
+    <ClInclude Include="util\csv.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="util\tuple.h">
+      <Filter>util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\engine.cpp">
@@ -416,6 +422,12 @@
     </None>
     <None Include="render\shaderprogram.inl">
       <Filter>render\shader</Filter>
+    </None>
+    <None Include="util\tuple.inl">
+      <Filter>util</Filter>
+    </None>
+    <None Include="util\csv.inl">
+      <Filter>util</Filter>
     </None>
   </ItemGroup>
 </Project>
